Work on the first use case and query for brands